--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Webhooks for heroku web -> worker dyno",
   "main": "src/lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc mocha --recursive src/spec"
   },
   "repository": {
     "type": "git",
@@ -20,10 +20,37 @@
   "author": "financialforce",
   "license": "ISC",
   "dependencies": {
+    "avsc": "^5.0.6",
     "body-parser": "^1.18.1",
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "helmet": "^3.8.1",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "eslint": "^4.7.2"
+    "chai": "^4.1.2",
+    "eslint": "^4.7.2",
+    "mocha": "^3.5.3",
+    "nyc": "^11.2.1",
+    "sinon": "^3.3.0",
+    "supertest": "^3.0.0"
+  },
+  "nyc": {
+    "check-coverage": true,
+    "per-file": true,
+    "lines": 100,
+    "statements": 100,
+    "functions": 100,
+    "branches": 100,
+    "include": [
+      "src"
+    ],
+    "reporter": [
+      "lcov",
+      "html",
+      "text",
+      "text-summary"
+    ],
+    "cache": true,
+    "all": true
   }
 }
