--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^4.7.2",
     "mocha": "^3.5.3",
     "nyc": "^11.2.1",
+    "proxyquire": "^1.8.0",
     "sinon": "^3.3.0",
     "supertest": "^3.0.0"
   },
