--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Webhooks for heroku web -> worker dyno",
   "main": "src/lib/index.js",
   "scripts": {
-    "test": "nyc mocha --recursive src/spec"
+    "test": "nyc --exclude src/harness mocha --recursive src/spec"
   },
   "repository": {
     "type": "git",
