--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Webhooks for heroku web -> worker dyno",
   "main": "src/lib/index.js",
   "scripts": {
+	"doc": "jsdoc src/lib -r -d doc",
     "test": "nyc --exclude src/harness mocha --recursive src/spec"
   },
   "repository": {
@@ -33,6 +34,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-sinon": "^2.8.1",
     "eslint": "^4.7.2",
+    "jsdoc": "^3.5.5",
     "mocha": "^3.5.3",
     "nyc": "^11.2.1",
     "proxyquire": "^1.8.0",
