--- a/package.json
+++ b/package.json
@@ -22,25 +22,25 @@
   "author": "financialforce",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.5.1",
-    "avsc": "^5.0.6",
-    "body-parser": "^1.18.1",
-    "express": "^4.15.4",
-    "helmet": "^3.8.1",
-    "lodash": "^4.17.4"
+    "amqplib": "0.5.1",
+    "avsc": "5.0.6",
+    "body-parser": "1.18.1",
+    "express": "4.15.4",
+    "helmet": "3.8.1",
+    "lodash": "4.17.4"
   },
   "devDependencies": {
-    "app-root-path": "^2.0.1",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^7.1.1",
-    "chai-sinon": "^2.8.1",
-    "eslint": "^4.7.2",
-    "jsdoc": "^3.5.5",
-    "mocha": "^3.5.3",
-    "nyc": "^11.2.1",
-    "proxyquire": "^1.8.0",
-    "sinon": "^3.3.0",
-    "supertest": "^3.0.0"
+    "app-root-path": "2.0.1",
+    "chai": "3.5.0",
+    "chai-as-promised": "7.1.1",
+    "chai-sinon": "2.8.1",
+    "eslint": "4.7.2",
+    "jsdoc": "3.5.5",
+    "mocha": "3.5.3",
+    "nyc": "11.2.1",
+    "proxyquire": "1.8.0",
+    "sinon": "3.3.0",
+    "supertest": "3.0.0"
   },
   "nyc": {
     "check-coverage": true,
