--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "4.17.4"
   },
   "devDependencies": {
+    "@ffres/eslint-config": "1.0.0",
     "app-root-path": "2.0.1",
     "chai": "3.5.0",
     "chai-as-promised": "7.1.1",
