--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ffres/nozomi",
-  "version": "0.0.0-RESEARCH-769-0",
+  "version": "1.0.0",
   "description": "Webhooks for heroku web -> worker dyno",
   "main": "src/lib/index.js",
   "scripts": {
