--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@financialforcedev/nozomi",
+  "name": "@financialforcedev/orizuru",
   "version": "2.1.0",
   "description": "Webhooks for heroku web -> worker dyno",
   "main": "src/lib/index.js",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://stash.dev.financialforce.com/projects/RESEARCH/repos/financialforcedev--nozomi/"
+    "url": "https://stash.dev.financialforce.com/projects/RESEARCH/repos/financialforcedev--orizuru/"
   },
   "keywords": [
     "webhook",
     "web",
     "heroku",
     "worker",
-    "nozomi",
+    "orizuru",
     "dyno"
   ],
   "author": "financialforce",
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@financialforcedev/eslint-config": "2.0.0",
-    "@financialforcedev/nozomi-transport-rabbitmq": "1.1.1",
+    "@financialforcedev/orizuru-transport-rabbitmq": "2.0.0",
     "app-root-path": "2.0.1",
     "chai": "3.5.0",
     "chai-as-promised": "7.1.1",
