--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@financialforcedev/orizuru",
   "version": "3.0.0",
-  "description": "Webhooks for heroku web -> worker dyno",
+  "description": "Streamlined communication between Heroku dynos / other worker processes",
   "main": "src/lib/index.js",
   "scripts": {
     "doc": "jsdoc src/lib -r -d doc --readme readme.md",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://stash.dev.financialforce.com/projects/RESEARCH/repos/financialforcedev--orizuru/"
+    "url": "https://github.com/financialforcedev/financialforcedev--orizuru"
   },
   "keywords": [
     "webhook",
@@ -31,12 +31,11 @@
     "lodash": "4.17.4"
   },
   "devDependencies": {
-    "@financialforcedev/eslint-config": "2.0.0",
-    "@financialforcedev/orizuru-transport-rabbitmq": "2.0.0",
+    "@financialforcedev/eslint-config": "3.0.0",
+    "@financialforcedev/orizuru-transport-rabbitmq": "3.0.0",
     "app-root-path": "2.0.1",
     "chai": "3.5.0",
     "chai-as-promised": "7.1.1",
-    "eslint": "4.7.2",
     "jsdoc": "3.5.5",
     "mocha": "3.5.3",
     "nyc": "11.2.1",
