--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   "dependencies": {
     "amqplib": "0.5.1",
     "avsc": "5.0.6",
-    "body-parser": "1.18.1",
-    "express": "4.15.4",
-    "helmet": "3.8.1",
-    "lodash": "4.17.4"
+    "body-parser": "1.18.2",
+    "debug": "3.1.0",
+    "express": "5.0.0-alpha.6",
+    "helmet": "3.8.2",
+    "lodash": "4.17.4",
+    "send": "0.16.1"
   },
   "devDependencies": {
     "@financialforcedev/eslint-config": "3.0.1",
