--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "5.0.0-alpha.6",
     "helmet": "3.8.2",
     "lodash": "4.17.4",
+    "mime": "2.0.3",
     "send": "0.16.1"
   },
   "devDependencies": {
