--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,10 +10,17 @@
 			]
 		}
 	},
-	"beautify.ignore": ["**/.vscode/*","**/force/*","package.json"],
+	"beautify.ignore": [
+		"**/.vscode/*",
+		"**/force/*",
+		"package.json"
+	],
 	"editor.detectIndentation": false,
 	"editor.formatOnSave": true,
 	"editor.insertSpaces": false,
+	"files.associations": {
+		"*.avsc": "json"
+	},
 	"files.exclude": {
 		"**/.nyc_output": true,
 		"**/.git": true,
@@ -23,11 +30,13 @@
 		"**/.DS_Store": true,
 		"**/coverage": true
 	},
+	"files.insertFinalNewline": true,
 	"lcov.path": "coverage/lcov.info",
 	"lcov.watch": [{
 		"pattern": "**/*.js",
 		"command": "npm test"
 	}],
+	"runCurrentTest.run": "npm run single-test -- ${relativeTestPath}",
 	"terminal.integrated.scrollback": 10000,
 	"workbench.colorCustomizations": {
 		"activityBar.foreground": "#007DFF"
