--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "doc": "jsdoc src/lib -r -d doc --readme readme.md",
     "pretest": "eslint src",
+    "single-test": "nyc --all=false mocha",
     "test": "nyc --exclude src/example mocha --recursive src/spec"
   },
   "repository": {
@@ -27,7 +28,9 @@
     "body-parser": "1.18.2",
     "debug": "3.1.0",
     "express": "4.16.2",
+    "fs-extra": "5.0.0",
     "helmet": "3.9.0",
+    "http-status-codes": "1.3.0",
     "lodash": "4.17.4"
   },
   "devDependencies": {
