--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@financialforcedev/orizuru",
-  "version": "5.1.2",
+  "version": "6.0.0",
   "description": "Streamlined communication between Heroku dynos / other worker processes",
   "main": "src/lib/index.js",
   "scripts": {
-    "doc": "jsdoc src/lib -r -d doc --readme readme.md",
+    "doc": "jsdoc -c config/jsdoc.json",
     "pretest": "eslint src",
     "single-test": "nyc --all=false mocha",
     "test": "nyc --exclude src/example mocha --recursive src/spec"
@@ -39,6 +39,7 @@
     "chai": "4.1.2",
     "chai-as-promised": "7.1.1",
     "jsdoc": "3.5.5",
+    "minami": "1.2.3",
     "mocha": "4.0.1",
     "nyc": "11.3.0",
     "proxyquire": "1.8.0",
