--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@financialforcedev/orizuru",
-  "version": "6.0.0",
+  "version": "5.1.2",
   "description": "Streamlined communication between Heroku dynos / other worker processes",
   "main": "src/lib/index.js",
   "scripts": {
     "doc": "jsdoc -c config/jsdoc.json",
+    "init-project": "cp run.properties local.run.properties && cp test.properties local.test.properties",
     "pretest": "eslint src",
     "single-test": "nyc --all=false mocha",
     "test": "nyc --exclude src/example mocha --recursive src/spec"
@@ -26,7 +27,6 @@
   "dependencies": {
     "avsc": "5.1.1",
     "body-parser": "1.18.2",
-    "debug": "3.1.0",
     "express": "4.16.2",
     "fs-extra": "5.0.0",
     "helmet": "3.9.0",
@@ -35,9 +35,10 @@
   },
   "devDependencies": {
     "@financialforcedev/eslint-config": "3.0.1",
-    "app-root-path": "2.0.1",
+    "@financialforcedev/orizuru-transport-rabbitmq": "3.1.1",
     "chai": "4.1.2",
     "chai-as-promised": "7.1.1",
+    "debug-plus": "1.2.2",
     "jsdoc": "3.5.5",
     "minami": "1.2.3",
     "mocha": "4.0.1",
