--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+	"beautify.config": "node_modules/@financialforcedev/eslint-config/.jsbeautifyrc",
 	"beautify.language": {
 		"js": {
 			"type": [
@@ -31,10 +32,12 @@
 	},
 	"files.insertFinalNewline": true,
 	"lcov.path": "coverage/lcov.info",
-	"lcov.watch": [{
-		"pattern": "**/*.js",
-		"command": "npm test"
-	}],
+	"lcov.watch": [
+		{
+			"pattern": "**/*.js",
+			"command": "npm test"
+		}
+	],
 	"runCurrentTest.run": "npm run single-test -- ${relativeTestPath}",
 	"terminal.integrated.scrollback": 10000,
 	"workbench.colorCustomizations": {
