--- a/package.json
+++ b/package.json
@@ -1,68 +1,82 @@
 {
-  "name": "@financialforcedev/orizuru",
-  "version": "6.1.0",
-  "description": "Streamlined communication between Heroku dynos / other worker processes",
-  "main": "src/lib/index.js",
-  "scripts": {
-    "doc": "jsdoc -c config/jsdoc.json",
-    "init-project": "cp run.properties local.run.properties && cp test.properties local.test.properties",
-    "pretest": "eslint src",
-    "single-test": "nyc --all=false mocha",
-    "test": "nyc --exclude src/example mocha --recursive src/spec"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/financialforcedev/orizuru"
-  },
-  "keywords": [
-    "webhook",
-    "web",
-    "heroku",
-    "worker",
-    "orizuru",
-    "dyno"
-  ],
-  "author": "financialforce",
-  "license": "BSD-3-Clause",
-  "dependencies": {
-    "avsc": "5.2.3",
-    "express": "4.16.3",
-    "fs-extra": "6.0.1",
-    "http-status-codes": "1.3.0",
-    "lodash": "4.17.10"
-  },
-  "devDependencies": {
-    "@financialforcedev/eslint-config": "4.0.0",
-    "@financialforcedev/orizuru-transport-rabbitmq": "3.2.1",
-    "chai": "4.1.2",
-    "chai-as-promised": "7.1.1",
-    "debug-plus": "1.2.2",
-    "jsdoc": "3.5.5",
-    "mocha": "5.1.1",
-    "nyc": "11.8.0",
-    "proxyquire": "2.0.1",
-    "sinon": "5.0.7",
-    "sinon-chai": "3.0.0",
-    "supertest": "3.1.0",
-    "typescript": "2.8.3"
-  },
-  "nyc": {
-    "check-coverage": true,
-    "per-file": true,
-    "lines": 100,
-    "statements": 100,
-    "functions": 100,
-    "branches": 100,
-    "include": [
-      "src"
-    ],
-    "reporter": [
-      "lcov",
-      "html",
-      "text",
-      "text-summary"
-    ],
-    "cache": true,
-    "all": true
-  }
+	"name": "@financialforcedev/orizuru",
+	"version": "6.1.0",
+	"description": "Streamlined communication between Heroku dynos / other worker processes",
+	"main": "src/lib/index.js",
+	"scripts": {
+		"doc": "jsdoc -c config/jsdoc.json",
+		"init-project": "cp run.properties local.run.properties && cp test.properties local.test.properties",
+		"pretest": "tslint ./src",
+		"single-test": "nyc --all=false mocha",
+		"test": "NODE_ENV=test mocha --recursive",
+		"cover": "NODE_ENV=test nyc npm t"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/financialforcedev/orizuru"
+	},
+	"keywords": [
+		"webhook",
+		"web",
+		"heroku",
+		"worker",
+		"orizuru",
+		"dyno"
+	],
+	"author": "financialforce",
+	"license": "BSD-3-Clause",
+	"dependencies": {
+		"@types/express": "4.11.1",
+		"@types/fs-extra": "5.0.2",
+		"@types/lodash": "4.14.109",
+		"@types/node": "10.1.2",
+		"avsc": "5.2.3",
+		"express": "4.16.3",
+		"fs-extra": "6.0.1",
+		"http-status-codes": "1.3.0",
+		"lodash": "4.17.10"
+	},
+	"devDependencies": {
+		"@financialforcedev/eslint-config": "4.0.0",
+		"@financialforcedev/orizuru-transport-rabbitmq": "3.2.1",
+		"@types/chai": "4.1.3",
+		"@types/chai-as-promised": "7.1.0",
+		"@types/mocha": "5.2.0",
+		"@types/sinon": "4.3.3",
+		"@types/sinon-chai": "2.7.31",
+		"chai": "4.1.2",
+		"chai-as-promised": "7.1.1",
+		"debug-plus": "1.2.2",
+		"jsdoc": "3.5.5",
+		"mocha": "5.1.1",
+		"nyc": "11.8.0",
+		"proxyquire": "2.0.1",
+		"sinon": "5.0.10",
+		"sinon-chai": "3.0.0",
+		"source-map-support": "0.5.6",
+		"supertest": "3.1.0",
+		"ts-node": "6.0.4",
+		"tslint": "5.10.0",
+		"typescript": "2.8.3"
+	},
+	"nyc": {
+		"include": [
+			"app/*.ts",
+			"app/**/*.ts"
+		],
+		"exclude": [
+			"typings"
+		],
+		"extension": [
+			".ts"
+		],
+		"require": [
+			"ts-node/register"
+		],
+		"reporter": [
+			"json",
+			"html"
+		],
+		"all": true
+	}
 }
