--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,8 +29,7 @@
 		"**/CVS": true,
 		"**/.DS_Store": true,
 		"**/coverage": true,
-		"lib/**/*.js": true,
-		"test/**/*.js": true
+		"src/**/*.js": true
 	},
 	"files.insertFinalNewline": true,
 	"lcov.path": "coverage/lcov.info",
