--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
 	"name": "@financialforcedev/orizuru",
-	"version": "6.1.0",
+	"version": "7.0.0",
 	"description": "Streamlined communication between Heroku dynos / other worker processes",
-	"main": "src/src/index.js",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"scripts": {
-		"doc": "tsdoc",
+		"prepare": "npm run build",
+		"build": "tsc",
 		"init-project": "cp run.properties local.run.properties && cp test.properties local.test.properties",
 		"pretest": "tslint ./src",
-		"test": "nyc mocha"
+		"test": "nyc mocha --require ts-node/register --watch-extensions ts test/*.test.ts test/**/*.test.ts test/**/**/*.test.ts"
 	},
 	"repository": {
 		"type": "git",
