--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"prepare": "npm run build",
+		"prepare": "npm run build && cp src/index/transport/transport.avsc dist/index/transport",
 		"build": "tsc",
 		"init-project": "cp run.properties local.run.properties && cp test.properties local.test.properties",
-		"pretest": "tslint ./src",
-		"test": "nyc mocha --require ts-node/register --watch-extensions ts test/*.test.ts test/**/*.test.ts test/**/**/*.test.ts"
+		"pretest": "tslint -p .",
+		"test": "nyc mocha --require ts-node/register --watch-extensions ts test/**/*.test.ts test/**/**/*.test.ts"
 	},
 	"repository": {
 		"type": "git",
