--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"prepare": "npm run build && cp src/index/transport/transport.avsc dist/index/transport",
 		"build": "tsc",
 		"init-project": "cp run.properties local.run.properties && cp test.properties local.test.properties",
-		"pretest": "tslint -p .",
+		"pretest": "tslint 'src/**/*.ts' 'test/**/*.ts'",
 		"test": "nyc mocha --require ts-node/register --watch-extensions ts test/**/*.test.ts test/**/**/*.test.ts"
 	},
 	"repository": {
