--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"build": "tsc",
-		"doc": "typedoc --out docs src/**/* --excludePrivate --mode file",
+		"doc": "typedoc --out docs src/**/* --mode file",
 		"init-project": "cp run.properties local.run.properties && cp test.properties local.test.properties",
 		"prepare": "npm run build && cp src/index/transport/transport.avsc dist/index/transport",
 		"pretest": "tslint 'src/**/*.ts' 'test/**/*.ts'",
@@ -43,6 +43,8 @@
 		"@types/chai": "4.1.3",
 		"@types/chai-as-promised": "7.1.0",
 		"@types/mocha": "5.2.0",
+		"@types/sinon": "4.3.3",
+		"@types/sinon-chai": "2.7.32",
 		"chai": "4.1.2",
 		"chai-as-promised": "7.1.1",
 		"debug-plus": "1.2.2",
