Updates to typescript interfaces and documentation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -57,8 +57,12 @@
 				"--timeout",
 				"999999",
 				"--colors",
-				"--recursive",
-				"${workspaceRoot}/test"
+				"--require",
+				"ts-node/register",
+				"--watch-extensions",
+				"ts",
+				"${workspaceRoot}/test/**/*.test.ts",
+				"${workspaceRoot}/test/**/**/*.test.ts"
 			],
 			"internalConsoleOptions": "openOnSessionStart"
 		}
