--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"build": "tsc",
-		"doc": "typedoc --ignoreCompilerErrors --out docs src/**/* --mode file",
+		"doc": "typedoc --ignoreCompilerErrors --out doc src/**/* --mode file",
 		"init-project": "cp run.properties local.run.properties && cp test.properties local.test.properties",
 		"prepare": "npm run build && cp src/index/transport/transport.avsc dist/index/transport",
 		"pretest": "tslint -p tsconfig.json 'src/**/*.ts' 'test/**/*.ts'",
