--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"build": "tsc",
+		"build": "tsc && cp src/index/transport/transport.avsc dist/index/transport",
 		"doc": "typedoc --ignoreCompilerErrors --out doc src/**/* --mode file",
 		"init-project": "cp run.properties local.run.properties && cp test.properties local.test.properties",
-		"prepare": "npm run build && cp src/index/transport/transport.avsc dist/index/transport",
+		"prepare": "npm run build",
 		"pretest": "tslint -p tsconfig.json",
 		"test": "nyc mocha --require ts-node/register --watch-extensions ts test/**/*.test.ts test/**/**/*.test.ts"
 	},
