--- a/package.json
+++ b/package.json
@@ -27,35 +27,35 @@
 	"author": "financialforce",
 	"license": "BSD-3-Clause",
 	"dependencies": {
-		"@types/express": "4.11.1",
-		"@types/fs-extra": "5.0.2",
-		"@types/lodash": "4.14.109",
-		"@types/node": "10.1.3",
-		"avsc": "5.2.3",
-		"express": "4.16.3",
-		"fs-extra": "6.0.1",
-		"http-status-codes": "1.3.0",
-		"lodash": "4.17.10"
+		"@types/express": "^4.16.0",
+		"@types/fs-extra": "^5.0.3",
+		"@types/lodash": "^4.14.109",
+		"@types/node": "^10.3.2",
+		"avsc": "^5.3.0",
+		"express": "^4.16.3",
+		"fs-extra": "^6.0.1",
+		"http-status-codes": "^1.3.0",
+		"lodash": "^4.17.10"
 	},
 	"devDependencies": {
-		"@types/chai": "4.1.3",
-		"@types/chai-as-promised": "7.1.0",
-		"@types/mocha": "5.2.0",
-		"@types/sinon": "5.0.1",
-		"@types/sinon-chai": "2.7.32",
-		"chai": "4.1.2",
-		"chai-as-promised": "7.1.1",
-		"debug-plus": "1.2.2",
-		"mocha": "5.2.0",
-		"nyc": "11.8.0",
-		"proxyquire": "2.0.1",
-		"sinon": "5.0.10",
-		"sinon-chai": "3.1.0",
-		"supertest": "3.1.0",
-		"ts-node": "6.0.5",
-		"tslint": "5.10.0",
-		"typedoc": "0.11.1",
-		"typescript": "2.8.3"
+		"@types/chai": "^4.1.3",
+		"@types/chai-as-promised": "^7.1.0",
+		"@types/mocha": "^5.2.1",
+		"@types/sinon": "^5.0.1",
+		"@types/sinon-chai": "^2.7.32",
+		"chai": "^4.1.2",
+		"chai-as-promised": "^7.1.1",
+		"debug-plus": "^1.2.2",
+		"mocha": "^5.2.0",
+		"nyc": "^12.0.2",
+		"proxyquire": "^2.0.1",
+		"sinon": "^6.0.0",
+		"sinon-chai": "^3.1.0",
+		"supertest": "^3.1.0",
+		"ts-node": "^6.1.0",
+		"tslint": "^5.10.0",
+		"typedoc": "^0.11.1",
+		"typescript": "^2.9.1"
 	},
 	"nyc": {
 		"check-coverage": true,
