--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
 	"dependencies": {
 		"@types/express": "^4.16.0",
 		"@types/fs-extra": "^5.0.3",
-		"@types/lodash": "^4.14.109",
-		"@types/node": "^10.3.2",
+		"@types/lodash": "4.14.110",
+		"@types/node": "^10.3.4",
 		"avsc": "^5.3.0",
 		"express": "^4.16.3",
 		"fs-extra": "^6.0.1",
@@ -38,11 +38,11 @@
 		"lodash": "^4.17.10"
 	},
 	"devDependencies": {
-		"@types/chai": "^4.1.3",
+		"@types/chai": "^4.1.4",
 		"@types/chai-as-promised": "^7.1.0",
-		"@types/mocha": "^5.2.1",
+		"@types/mocha": "^5.2.2",
 		"@types/sinon": "^5.0.1",
-		"@types/sinon-chai": "^2.7.32",
+		"@types/sinon-chai": "^3.2.0",
 		"chai": "^4.1.2",
 		"chai-as-promised": "^7.1.1",
 		"debug-plus": "^1.2.2",
@@ -50,12 +50,12 @@
 		"nyc": "^12.0.2",
 		"proxyquire": "^2.0.1",
 		"sinon": "^6.0.0",
-		"sinon-chai": "^3.1.0",
+		"sinon-chai": "^3.2.0",
 		"supertest": "^3.1.0",
-		"ts-node": "^6.1.0",
+		"ts-node": "^6.1.1",
 		"tslint": "^5.10.0",
 		"typedoc": "^0.11.1",
-		"typescript": "^2.9.1"
+		"typescript": "^2.9.2"
 	},
 	"nyc": {
 		"check-coverage": true,
