--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 	"dependencies": {
 		"@types/express": "^4.16.0",
 		"@types/fs-extra": "^5.0.3",
-		"@types/lodash": "4.14.110",
+		"@types/lodash": "^4.14.110",
 		"@types/node": "^10.3.4",
 		"avsc": "^5.3.0",
 		"express": "^4.16.3",
@@ -58,6 +58,7 @@
 		"typescript": "^2.9.2"
 	},
 	"nyc": {
+		"all": true,
 		"check-coverage": true,
 		"per-file": true,
 		"lines": 100,
@@ -69,6 +70,12 @@
 		],
 		"extension": [
 			".ts"
+		],
+		"exclude": [
+			"coverage",
+			"dist",
+			"doc",
+			"**/*.d.ts"
 		],
 		"reporter": [
 			"lcov",
