--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"init-project": "cp run.properties local.run.properties && cp test.properties local.test.properties",
 		"prepare": "npm run build",
 		"pretest": "tslint -p tsconfig.json",
+		"posttest": "nyc --nycrc-path=systemtests/nyc.opts mocha --opts systemtests/mocha.opts",
 		"test": "nyc --nycrc-path=test/nyc.opts mocha"
 	},
 	"repository": {
