--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"lodash": "^4.17.11"
 	},
 	"devDependencies": {
+		"@financialforcedev/orizuru-transport-rabbitmq": "^4.0.0",
 		"@types/chai": "^4.1.5",
 		"@types/chai-as-promised": "^7.1.0",
 		"@types/mocha": "^5.2.5",
