--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
 		"@types/mocha": "^5.2.5",
 		"@types/sinon": "^5.0.2",
 		"@types/sinon-chai": "^3.2.0",
+		"@types/supertest": "^2.0.6",
+		"axios": "^0.18.0",
 		"chai": "^4.1.2",
 		"chai-as-promised": "^7.1.1",
 		"debug-plus": "^1.2.2",
