--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,28 @@
 {
 	"compilerOptions": {
-		"target": "es5",
-		"module": "commonjs",
 		"declaration": true,
-		"outDir": "./dist",
-		"strict": true,
-		"strictNullChecks": true,
-		"noUnusedLocals": true,
-		"noImplicitReturns": true,
-		"noFallthroughCasesInSwitch": true,
-		"moduleResolution": "node",
+		"declarationDir": "dist/types",
+		"declarationMap": true,
 		"esModuleInterop": true,
+		"inlineSourceMap": true,
+		"inlineSources": true,
 		"lib": [
 			"es2015",
 			"dom"
-		]
+		],
+		"module": "commonjs",
+		"moduleResolution": "node",
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitReturns": true,
+		"noUnusedLocals": true,
+		"outDir": "./dist",
+		"strict": true,
+		"strictNullChecks": true,
+		"target": "es5"
 	},
 	"include": [
-		"src"
+		"src",
+		"test",
+		"systemtests"
 	]
 }
