--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"build": "tsc && cp src/index/transport/transport.avsc dist/index/transport",
+		"build": "npm run build-clean && npm run build-compile && npm run build-copy",
+		"build-clean": "rm -rf dist",
+		"build-compile": "tsc",
+		"build-copy": "npm run build-copy-transport",
+		"build-copy-transport": "cp src/index/transport/transport.avsc dist/src/index/transport",
 		"coverage": "nyc --report-dir=coverage --nycrc-path=test/nyc.opts mocha",
 		"coverage-systemtests": "nyc --report-dir=coverage --nycrc-path=systemtests/nyc.opts mocha --opts systemtests/mocha.opts",
 		"doc": "npm run doc-generate && npm run doc-sanitize-avsc && npm run doc-sanitize-node",
