--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
 		"inlineSourceMap": true,
 		"inlineSources": true,
 		"lib": [
-			"es2015",
-			"dom"
+			"dom",
+			"es2017"
 		],
 		"module": "commonjs",
 		"moduleResolution": "node",
