--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
 		"build-copy": "npm run build-copy-transport",
 		"build-copy-transport": "cp src/index/transport/transport.avsc dist/src/index/transport",
 		"coverage": "nyc --report-dir=coverage --nycrc-path=test/.nyc.json mocha --config test/.mocha.json",
-		"coverage-systemtests": "nyc --report-dir=coverage --nycrc-path=systemtests/nyc.opts mocha --opts systemtests/mocha.opts",
+		"coverage-systemtests": "nyc --report-dir=coverage --nycrc-path=systemtests/.nyc.json mocha --opts systemtests/mocha.opts",
 		"doc": "npm run doc-generate && npm run doc-sanitize-avsc && npm run doc-sanitize-node",
 		"doc-generate": "typedoc --gitRevision master --ignoreCompilerErrors --out doc src/**/* --mode file",
 		"doc-sanitize-avsc": "sed -E -i '' 's|'$PWD'/node_modules/avsc/types/index.d.ts:([0-9]*)|<a href=\"https://github.com/mtth/avsc/blob/master/types/index.d.ts#L\\1\">avsc/types/index.d.ts:\\1</a>|g' $(find doc -type f -regex '^doc/[a-zA-Z/.]*.html$')",
 		"doc-sanitize-node": "sed -E -i '' 's|'$PWD'/node_modules/@types/node/events.d.ts:([0-9]*)|<a href=\"https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/node/events.d.ts#L\\1\">node/events.d.ts:\\1</a>|g' $(find doc -type f -regex '^doc/[a-zA-Z/.]*.html$')",
 		"prepare": "npm run build",
 		"pretest": "tslint -p tsconfig.json",
-		"posttest": "nyc --report-dir=coverage-systemtests --nycrc-path=systemtests/nyc.opts mocha --opts systemtests/mocha.opts",
+		"posttest": "nyc --report-dir=coverage-systemtests --nycrc-path=systemtests/.nyc.json mocha --opts systemtests/mocha.opts",
 		"test": "nyc --report-dir=coverage --nycrc-path=test/.nyc.json mocha --config test/.mocha.json"
 	},
 	"repository": {
