--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,11 +7,11 @@
 			"name": "Debug Tests",
 			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
 			"args": [
-				"-u",
-				"tdd",
-				"--timeout",
-				"999999"
+				"--config",
+				"${workspaceRoot}/test/.mocha.json",
+				"--no-timeouts"
 			],
+			"console": "internalConsole",
 			"internalConsoleOptions": "openOnSessionStart"
 		},
 		{
@@ -20,13 +20,11 @@
 			"name": "Debug System Tests",
 			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
 			"args": [
-				"-u",
-				"tdd",
-				"--timeout",
-				"999999",
-				"--opts",
-				"systemtests/mocha.opts"
+				"--config",
+				"${workspaceRoot}/systemtests/.mocha.json",
+				"--no-timeouts"
 			],
+			"console": "internalConsole",
 			"internalConsoleOptions": "openOnSessionStart"
 		},
 	]
