--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"@financialforcedev/orizuru-transport-rabbitmq": "^5.0.1",
 		"@types/chai": "^4.1.7",
 		"@types/chai-as-promised": "^7.1.0",
+		"@types/jest": "^24.0.11",
 		"@types/sinon": "^7.0.6",
 		"@types/sinon-chai": "^3.2.2",
 		"@types/supertest": "^2.0.7",
@@ -59,9 +60,11 @@
 		"chai": "^4.2.0",
 		"chai-as-promised": "^7.1.1",
 		"debug-plus": "^1.2.2",
+		"jest": "^24.5.0",
 		"sinon": "^7.2.4",
 		"sinon-chai": "^3.3.0",
 		"supertest": "^3.4.2",
+		"ts-jest": "^24.0.0",
 		"tslint": "^5.12.1",
 		"typedoc": "^0.14.2",
 		"typescript": "^3.3.3"
