--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"coverage-systemtests": "nyc --report-dir=coverage --nycrc-path=systemtests/.nyc.json mocha --config systemtests/.mocha.json",
 		"coverage-unit": "jest --config test/.jest.json",
 		"doc": "npm run doc-generate && npm run doc-sanitize-avsc && npm run doc-sanitize-node",
-		"doc-generate": "typedoc --gitRevision master --ignoreCompilerErrors --out doc src/**/* --mode file",
+		"doc-generate": "typedoc --gitRevision master --ignoreCompilerErrors --out doc src/**/* --readme readme.md",
 		"doc-sanitize-avsc": "sed -E -i '' 's|'$PWD'/node_modules/avsc/types/index.d.ts:([0-9]*)|<a href=\"https://github.com/mtth/avsc/blob/master/types/index.d.ts#L\\1\">avsc/types/index.d.ts:\\1</a>|g' $(find doc -type f -regex '^doc/[a-zA-Z/.]*.html$')",
 		"doc-sanitize-node": "sed -E -i '' 's|'$PWD'/node_modules/@types/node/events.d.ts:([0-9]*)|<a href=\"https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/node/events.d.ts#L\\1\">node/events.d.ts:\\1</a>|g' $(find doc -type f -regex '^doc/[a-zA-Z/.]*.html$')",
 		"posttest": "npm run coverage-system",
