--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
 		"ts-jest": "^24.0.0",
 		"tslint": "^5.14.0",
 		"typedoc": "^0.14.2",
+		"typedoc-plugin-external-module-name": "^2.0.0",
 		"typescript": "^3.3.4000"
 	}
 }
