Add docker scripts to package.json

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"build-compile": "tsc",
 		"build-copy": "npm run build-copy-transport",
 		"build-copy-transport": "cp src/index/transport/transport.avsc dist/src/index/transport",
-		"clean": "rm -rf coverage* && rm -rf dist && rm -rf node_modules && rm -f *.tgz",
+		"clean": "npm run build-clean && npm run docker-cleanup && rm -rf coverage* && rm -rf node_modules && rm -f *.tgz",
 		"coverage": "nyc --report-dir=coverage --nycrc-path=test/.nyc.json mocha --config test/.mocha.json",
 		"coverage-system": "NODE_APP_INSTANCE=system jest --config systemtests/.jest.json --runInBand --detectOpenHandles",
 		"coverage-systemtests": "nyc --report-dir=coverage --nycrc-path=systemtests/.nyc.json mocha --config systemtests/.mocha.json",
@@ -23,7 +23,13 @@
 		"doc-generate": "typedoc --gitRevision master --ignoreCompilerErrors --out doc src/**/* --readme readme.md",
 		"doc-sanitize-avsc": "sed -E -i '' 's|'$PWD'/node_modules/avsc/types/index.d.ts:([0-9]*)|<a href=\"https://github.com/mtth/avsc/blob/master/types/index.d.ts#L\\1\">avsc/types/index.d.ts:\\1</a>|g' $(find doc -type f -regex '^doc/[a-zA-Z/._]*.html$')",
 		"doc-sanitize-node": "sed -E -i '' 's|'$PWD'/node_modules/@types/node/events.d.ts:([0-9]*)|<a href=\"https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/node/events.d.ts#L\\1\">node/events.d.ts:\\1</a>|g' $(find doc -type f -regex '^doc/[a-zA-Z/._]*.html$')",
-		"posttest": "npm run coverage-system",
+		"docker-build": "cd node_modules/@financialforcedev/orizuru-transport-rabbitmq/dist/docker && docker-compose build",
+		"docker-cleanup": "npm run docker-cleanup-containers && npm run docker-cleanup-images",
+		"docker-cleanup-containers": "docker ps --filter=name='ffdc/*' --format '{{.ID}}' -a | xargs -L1 -t docker stop | xargs -L1 -t docker rm",
+		"docker-cleanup-images": " docker images --filter=reference='ffdc/*' --format '{{.ID}}' | xargs -L1 -t docker rmi",
+		"docker-start": "npm run docker-build && npm run docker-start-services",
+		"docker-start-services": "cd node_modules/@financialforcedev/orizuru-transport-rabbitmq/dist/docker && docker-compose up -d && sleep 20",
+		"posttest": "npm run docker-start && npm run coverage-system",
 		"prepare": "npm run build",
 		"pretest": "tslint -p tsconfig.json",
 		"test": "npm run coverage-unit",
