Update doc sanitize scripts

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
 		"coverage-unit": "jest --config test/.jest.json",
 		"doc": "npm run doc-generate && npm run doc-sanitize-avsc && npm run doc-sanitize-node",
 		"doc-generate": "typedoc --gitRevision master --ignoreCompilerErrors --out doc src/**/* --readme readme.md",
-		"doc-sanitize-avsc": "sed -E -i '' 's|'$PWD'/node_modules/avsc/types/index.d.ts:([0-9]*)|<a href=\"https://github.com/mtth/avsc/blob/master/types/index.d.ts#L\\1\">avsc/types/index.d.ts:\\1</a>|g' $(find doc -type f -regex '^doc/[a-zA-Z/._]*.html$')",
-		"doc-sanitize-node": "sed -E -i '' 's|'$PWD'/node_modules/@types/node/events.d.ts:([0-9]*)|<a href=\"https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/node/events.d.ts#L\\1\">node/events.d.ts:\\1</a>|g' $(find doc -type f -regex '^doc/[a-zA-Z/._]*.html$')",
+		"doc-sanitize-avsc": "sed -E -i '' 's|'$PWD'/node_modules/avsc/types/index.d.ts:([0-9]*)|<a href=\"https://github.com/mtth/avsc/blob/master/types/index.d.ts#L\\1\">avsc/types/index.d.ts:\\1</a>|g' $(find doc -type f -regex '^doc/[a-zA-Z1-9/\\._-]*.html$')",
+		"doc-sanitize-node": "sed -E -i '' 's|'$PWD'/node_modules/@types/node/events.d.ts:([0-9]*)|<a href=\"https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/node/events.d.ts#L\\1\">node/events.d.ts:\\1</a>|g' $(find doc -type f -regex '^doc/[a-zA-Z1-9/._-]*.html$')",
 		"docker-build": "cd node_modules/@financialforcedev/orizuru-transport-rabbitmq/dist/docker && docker-compose build",
 		"docker-cleanup": "npm run docker-cleanup-containers && npm run docker-cleanup-images",
 		"docker-cleanup-containers": "docker ps --filter=name='ffdc/*' --format '{{.ID}}' -a | xargs -L1 -t docker stop | xargs -L1 -t docker rm",
